# skills

./: .gitignore  AGENTS.md  IS_EVEN_EXTENSION_SPEC.md  IS_ODD_EXTENSION_SPEC.md  README.md  TODO.md  generate  install
prime-agent/: Cargo.toml  README.md
prime-agent/src/: main.rs
prime-agent/tests/: e2e.rs
scripts/: generate-vim-lsp-skill.lua  generate-vim-skill.lua
skills/: planet-scale
skills/better-auth-drizzle-init/: SKILL.md
skills/better-auth-social-login/: SKILL.md
skills/cloudflare/: SKILL.md
skills/cloudflare-assets/: SKILL.md
skills/cloudflare-do/: SKILL.md
skills/cloudflare-do-test/: SKILL.md
skills/cloudflare-hyperdrive/: SKILL.md
skills/cloudflare-project/: SKILL.md
skills/cloudflare-r2/: SKILL.md
skills/drizzle-migration/: SKILL.md
skills/frontend/: SKILL.md
skills/hyperdrive-drizzle/: SKILL.md
skills/is-even/: SKILL.md
skills/is-odd/: SKILL.md
skills/oauth/: SKILL.md
skills/prime-planning/: SKILL.md
skills/prime-review/: SKILL.md
skills/tmux-dev/: SKILL.md
skills/vim/: SKILL.md
skills/vim.lsp/: SKILL.md
